--- a/aula03/classe.ipynb
+++ b/aula03/classe.ipynb
@@ -1851,16 +1851,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "DESAFIO - NOVA ABORDAGEM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OLUAP EUQIRNEH "
+     ]
+    }
+   ],
+   "source": [
+    "nome = input('Digite seu nome: ').upper().split(' ')\n",
+    "for i in range(len(nome)):\n",
+    "    print(f'{nome[i][::-1]}', end = ' ')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('base')",
+   "display_name": "Python 3.10.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1874,12 +1893,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7afdae79f882afd843ad3de30804fa142b0efd19a4646e1d078bce26cf1c3ceb"
+    "hash": "32b087ebe7d51fca6931e9bc956754ea46a9bf5139b676961814778e7c952172"
    }
   }
  },
